product_docs/docs/pgd/6.2/reference/cli/command_ref/node/set-option.mdx
---
title: pgd node set-option
navTitle: Set Option
deepToC: true
redirects:
  - /pgd/latest/cli/command_ref/node/set-option/ #generated for DOCS-1247-PGD-6.0-Docs
---


## Synopsis

The `pgd node set-option` command is used to set node-level options in the EDB Postgres Distributed cluster.

## Syntax

```plaintext
pgd node <NODE_NAME> set-option [OPTIONS] <OPTION> <VALUE>
```

Where `<NODE_NAME>` is the name of the node for which you want to get options.

And `<OPTION>` is the name of a specific node option you want to get and `<VALUE>` is the value you want it set to.  

The following options are available:

### Node Options

| Option         | Description                                                                                                                                                                                                             | Type    |
|----------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------|
| route_priority | Relative routing priority of the node against other nodes in the same node group. Used only when electing a write leader.                                                                                               | integer |
| route_fence    | Set to fence the node. When fenced, the node can't receive connections from the Connection Manager. It therefore can't become the write leader or be available in the read-only node pool. Replication is not impacted. | bool    |
| route_writes   | Determines whether writes can be routed to this node, that is, whether the node can become write leader.                                                                                                                | bool    |
| route_reads    | Determines whether read-only connections can be routed to this node (PGD 5.5.0 and later).                                                                                                                              | bool    |
| route_dsn      | The dsn used by the Connection Manager to connect to this node.                                                                                                                                                         | string  |

## Options

No command specific options. See [Global Options](/pgd/latest/reference/cli/command_ref/#global-options).

## Examples

### Set a specific node option

```shell
pgd node kaboom set-option route_priority 100
__OUTPUT__
Command executed successfully
```

### Set a specific node option with a space in the value

```shell
pgd node kaboom set-option route_dsn "host=kaboom port=5444 dbname=pgddb user=postgres"
__OUTPUT__
Command executed successfully
```
